spade-tests/src/snapshots/spade_tests__ast_lowering__gen_if_without_else_typechecks_correctly_negative_on_false.snap
---
source: spade-tests/src/ast_lowering.rs
---
fn test() -> uint<2> {
    gen if false {
        0u2
    }
}


error: Output type mismatch. Expected uint<2>, got ()
  ┌─ testinput:2:9
  │
1 │ fn test() -> uint<2> {
  │              ------- uint<2> type specified here
2 │     gen if false {
  │         ^^ Found type ()
  │
  = note: Expected: uint<2>
               Got: ()
